cmake_minimum_required (VERSION 3.2)
set(CUNIT_VERSION_MAJOR 3)
set(CUNIT_VERSION_MINOR 0)
set(CUNIT_VERSION_PATCH 3)
set(CUNIT_VERSION "${CUNIT_VERSION_MAJOR}.${CUNIT_VERSION_MINOR}.${CUNIT_VERSION_PATCH}")
set(CUNIT_RELEASE cunity)

set(CUNIT_CMAKE_INSTALL yes)

add_subdirectory(CUnit)
add_subdirectory(Examples)